# Reach

./: .AUDIT_REPORT.md  .editorconfig  .env.example  .eslintrc.js  .gitignore  .prettierignore  ADAPTIVE_ENGINE_SPEC.md  AGENTS.md  ANTI_BIAS_PRIORITY_TABLE.md  ARCHITECTURAL_FINDINGS.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUTOPACK_SPEC.md  BIAS_PATTERNS.md  BLIND_SPOT_FEATURES.md  CAPABILITY_REGISTRY.md  CAPABILITY_SYSTEM.md  CHANGELOG.md  CLI_COMMAND_MATRIX.md  CLOUD_ADAPTER_MODEL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUTOVER.md  Cargo.toml  DETERMINISM_ROADMAP.md  DOCS_DRIFT_GUARD.md  Dockerfile  Dockerfile.dev  EXECUTION_PACK_SPEC.md  EXECUTION_PROTOCOL.md  FEDERATED_EXECUTION_SPEC.md  GAP_LIST.md  GOVERNANCE.md  GO_LIVE_REPORT.md  GRAPH_EXECUTION_SPEC.md  IMPORT_RULES.md  KIP.md  LAUNCHKIT.md  MOBILE_MILESTONE_SUMMARY.md  MODEL_ROUTING_SPEC.md  (+175 more)
.agent/: VERIFICATION_REPORT.md  claim-matrix.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  triage.md
.kilocode/: session-id
ARTIFACTS/: reach_stax_multiturn_200_rows.csv
agents/: architecture-agent.md  code-quality-agent.md  design-agent.md  documentation-agent.md  infrastructure-agent.md  release-agent.md
compat/: README.md  compat-suite.mjs
config/: canonical-language.json  cpx-scoring.json  dgl-openapi.json  dgl-performance.json  dgl-security-boundaries.json  economics.json  governance-policy.json
contracts/: mobile.yaml
crates/: Cargo.toml
crates/decision-engine/: Cargo.toml  HARVEST_NOTES.md  HARVEST_PLAN.md  README.md
crates/decision-engine/src/: classical.rs  determinism.rs  engine.rs  lib.rs  types.rs
crates/engine/: Cargo.toml
crates/engine-core/: Cargo.toml
crates/engine-core/fuzz/: Cargo.toml
crates/engine-core/fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_determinism_parse.rs  fuzz_fingerprint.rs
crates/engine-core/src/: lib.rs
crates/engine-core/src/decision/: determinism_golden_tests.rs  determinism_test.rs  wasm.rs
crates/engine-core/src/invariants/: mod.rs
crates/engine-core/tests/: chaos.rs  invariants.rs  property_invariants.rs  replay.rs  version_compatibility.rs
crates/engine/src/: artifacts.rs  capsule.rs  events.rs  ir.rs  lib.rs  policy.rs  state_machine.rs
crates/engine/src/artifacts/: mod.rs
crates/engine/src/policy/: mod.rs
crates/engine/src/state/: mod.rs
crates/engine/src/tools/: mod.rs
crates/engine/src/workflow/: mod.rs
crates/engine/tests/: execution_controls.rs  golden_workflow_plan.rs  policy_denies.rs
crates/ffi/c_abi/: Cargo.toml
crates/ffi/c_abi/src/: lib.rs
crates/ffi/uniffi/: Cargo.toml  build.rs
crates/ffi/uniffi/src/: lib.rs
crates/ffi/uniffi/uniffi/: reach.udl
crates/requiem/: Cargo.toml
crates/requiem/src/: lib.rs  server.rs
crates/requiem/src/protocol/: frame.rs  message.rs  mod.rs
crates/requiem/tests/: protocol_tests.rs
data/: demo_data.json  demo_seed.json  historical_seed.json  observability.json  quickstart.json
demo-report/: env.json  index.md  manifest.json  timeline.json
design/: VISUAL_SYSTEM.md  tokens.json
dgl/: agent-contract.schema.json  provider-telemetry.jsonl  report.schema.json
docker/: nginx.conf  prometheus.yml
docs/: ACHIEVEMENTS.md  ADOPTION_PLAYBOOK.md  ANDROID_SETUP.md  API_MIGRATION_ZEO.md  API_SURFACE_CONTRACT.md  API_VERSIONING.md  ARCADE_QA.md  ARCADE_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_LOCK.md  ARENA.md  AUDIT_LOG_SPEC.md  BENCHMARKING.md  BOUNDARIES.md  CANONICALIZATION_SPEC.md  CLI.md  CLI_REFERENCE.md  CLOUD_ADAPTER_MODEL.md  CODE_OF_CONDUCT.md  COMPLEXITY_REDUCTION_REPORT.md  CONCEPT_MAP.md  CONFIG.md  CONTRIBUTING.md  CPX.md  CTO_INTERROGATION.md  DEMO_SCRIPT.md  DEPENDENCY_AUDIT.md  DEPLOYMENT.md  DETERMINISM_DEBUGGING.md  DETERMINISM_MANIFEST.md  DETERMINISM_SPEC.md  DOCTOR.md  ECONOMICS.md  EDGE_MODE.md  ENTROPY_SURFACE_SUMMARY.md  ENVIRONMENT_VARIABLES.md  ERRORS.md  ERROR_CODES.md  ERROR_CODE_REGISTRY.md  EVENT_MODEL.md  (+118 more)
examples/: README.md  package.json
fixtures/: README.md  schema.json
logs/: files.txt  full_status.txt  hygiene_report.txt  hygiene_report_after_fix.txt  hygiene_report_fixed_regex.txt  hygiene_report_match.txt
openapi/: README.md  reach.openapi.yaml
plans/: OSS_FIRST_PIVOT_PLAN.md  OSS_REFINEMENT_PLAN.md
plugins/: README.md  plugin-schema.json  registry.json
policy-packs/: README.md  balanced-ops.json  drift-detection.json  high-signal-junctions.json  low-noise-junctions.json  retention-aggressive.json  retention-conservative.json  schema.json  strict-safe-mode.json  trust-gate-relaxed.json  trust-gate-tight.json
presets/: README.md  map.json
prompts/: ANTIGRAVITY_KIMI_BIAS_CLOSURE_PROMPT.md  ANTIGRAVITY_KIMI_BIAS_CLOSURE_SCORECARD.md  ANTIGRAVITY_KIMI_BIAS_CLOSURE_SCORECARD.template.json  GEMINI_IMAGE_PROMPT.md  STITCH_UI_PROMPT.md  VIDEO_PROMPT.md
protocol/: README.md
requiem/: Cargo.toml
scripts/: android-bootstrap.sh  anti-sprawl.mjs  canonical-language.allowlist.txt  check-go-workspace.sh  check-links.ts  check-node-version.mjs  check-reality.sh  check-route-duplication.mjs  check-rust-workspace.sh  check-terminology.ts  check-v0.1-gates.ts  cleanup-env.js  cleanup-hash.js  cpx-cli.ts  demo-e2e-smoke.sh  dgl-gate.ts  drift-report-ci.ts  enforce-canonical-language.ts  enforce-site-boundaries.ts  fix-tsc.js  governance-audit.ts  governance-demo.ts  guard-structure.mjs  install-termux.sh  install.ps1  install.sh  node-syscall.ts  npm-runner.mjs  pre-commit-language-check.sh  quickstart-demo.mjs  reach-health.mjs  reach-status.mjs  remove-committed-binaries.sh  repair-js-deps.mjs  repo-health.ts  run-npm-with-node20.mjs  scan-determinism.ts  sccl-cli.ts  secret-scan.mjs  security-scan.sh  (+59 more)
sdk/python/: README.md  pyproject.toml
sdk/python/reach_sdk/: __init__.py  client.py  exceptions.py  types.py
spec/: BACKWARD_COMPATIBILITY.md  CHANGELOG.md  REACH_PROTOCOL_v1.md  version.mjs
src/: doctor.test.ts  index.test.ts  index.ts
support/: faq.md  kb_index.json
templates/: README.md
test/: parity.js
tests/: mobile_guided_flow_test.sh  studio_routes.sh
tools/: dev.sh  e2e-smoke.sh  grade-bias-closure.mjs  (+5 more)
(+1929 files in other folders)
