[workspace]
members = [
  "crates/engine-core",
  "crates/engine",
  "crates/ffi/uniffi",
  "crates/ffi/c_abi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

