[package]
name = "decision-engine-rs"
version = "0.1.0"
edition = "2021"
description = "Deterministic decision engine core for Reach"
license = "MIT"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
wasm-bindgen = "0.2"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
ordered-float = { version = "4.0", features = ["serde"] }