[workspace]
members = [
  "decision-engine",
  "engine-core",
  "engine",
  "ffi/uniffi",
  "ffi/c_abi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
ordered-float = { version = "4.0", features = ["serde"] }
anyhow = "1.0"
indexmap = { version = "2", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
