[workspace]
members = [
  "decision-engine",
  "engine-core",
  "engine",
  "ffi/uniffi",
  "ffi/c_abi",
  "requiem",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
blake3 = "1.5"

