[package]
name = "decision-engine"
description = "Deterministic quant decision primitives for robust decision-making under uncertainty"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
ordered-float = { version = "4.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"

[lints]
workspace = true
