[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
ordered-float = { version = "4.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
