[package]
name = "engine-core-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
engine-core = { path = ".." }
serde_json = "1.0"
sha2 = "0.10"

# Enable arbitrary derives for fuzz targets
arbitrary = { version = "1.3", features = ["derive"] }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[[bin]]
name = "fuzz_determinism_parse"
path = "fuzz_targets/fuzz_determinism_parse.rs"

[[bin]]
name = "fuzz_config_parse"
path = "fuzz_targets/fuzz_config_parse.rs"

[[bin]]
name = "fuzz_fingerprint"
path = "fuzz_targets/fuzz_fingerprint.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
