[package]
name = "reach_uniffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = "../../engine" }
once_cell = "1"
serde_json.workspace = true
thiserror.workspace = true
uniffi = "0.28"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
